# rx90

./: Marzo_Román - English_TFM.docx  README.md
Latex_Doc/: .tex  LEAME.rtf  LibroTipoETSI.aux  LibroTipoETSI.glo  LibroTipoETSI.idx  LibroTipoETSI.ist  LibroTipoETSI.lof  LibroTipoETSI.lol  LibroTipoETSI.lot  LibroTipoETSI.synctex  LibroTipoETSI.tex  LibroTipoETSI.thm  LibroTipoETSI.toc  edicionPFC.sty  pfcTipoETSI.aux  pfcTipoETSI.bbl  pfcTipoETSI.blg  pfcTipoETSI.dvi  pfcTipoETSI.glo  pfcTipoETSI.idx  pfcTipoETSI.ist  pfcTipoETSI.lof  pfcTipoETSI.lol  pfcTipoETSI.lot  pfcTipoETSI.tex  pfcTipoETSI.thm  pfcTipoETSI.toc  tesisTipoETSI.tex
Latex_Doc/Acknowledgements/: Acknowledgements.aux  Acknowledgements.tex
Latex_Doc/CapituloEstilo/: estilolibroetsi.aux
Latex_Doc/CapituloLibroETSI/: CapituloLibroETSI.aux  CapituloLibroETSI.tex
Latex_Doc/CapituloProblemasLibroETSI/: CapituloProblemasETSI.aux
Latex_Doc/Cubierta/: cubierta.aux
Latex_Doc/agradecimientos/: agradecimientos.aux
Latex_Doc/apendices/: apendices.aux
Latex_Doc/estructura/: estructura.aux
Latex_Doc/introduccion/: introduccion.aux
Latex_Doc/notacion/: notacion.aux
Latex_Doc/prefacio/: prefacio.aux
Latex_Doc/resumen/: resumen.aux
Server_Client/: Rx90.cpp  test.cpp
Server_Client/No_modbus/: Makefile  Rx90.cpp  test  test.cpp
Server_Client/modbus/Virtual_serial_port/: serial.py
Server_Client/modbus/client/: ClientModBUS.cpp  ClientModBUS.h  client  client.cpp  constant.h
Server_Client/modbus/server/: Makefile  Rx90.h  server  server.cpp  serverModBUS.h
Server_Client/src?/: ClientModBus.cpp  RX90_azahara.cpp  RX90_azahara.h  ServerModbus.cpp  server.cpp
Server_Client/src?/server makefile/: Makefile
Server_Client/tfg/client/: ClientModBus.h  Makefile  client  client.cpp  constant.h
Server_Client/tfg/server/: Constant.h  Rx90.cpp  server  serverModBUS.cpp
moveit_tutorials/: CMakeLists.txt  package.xml
moveit_tutorials/doc/move_group_interface/src/: move_group_interface_tutorial.cpp
moveit_tutorials/doc/rx90_rviz_control/: CMakeLists.txt
moveit_tutorials/doc/rx90_rviz_control/launch/: rx90_rviz_control.launch
moveit_tutorials/doc/rx90_rviz_control/src/: Rx90.cpp  Rx90.h  rx90_rviz_control.cpp  test.cpp
rx90_control/: CMakeLists.txt  package.xml
rx90_control/config/: double_rx90_control.yaml  rx90_control.yaml  zrx90_control.yaml
rx90_control/launch/: double_rx90_control.launch  rx90_control.launch
rx90_control/src/: contact_plugin.cpp  gripper_plugin.cpp  hola_mundo.cpp  main_catch.cpp  main_publisher.cpp  rx90_pub.cpp  rx90_publisher.cpp
rx90_control/src/clients/: Set_activation_client.cpp  Set_position_client.cpp
rx90_control/srv/: Set_activation.srv  Set_position.srv
rx90_description/: CMakeLists.txt  package.xml
rx90_description/launch/: double_rx90.launch  double_spawn_rx90.launch  rx90.launch  rx90_world.launch  rx90_world_multi.launch  rx90_world_single.launch
rx90_description/meshes/stl/: RX-90_ARM.stl  RX-90_BARREL.stl  RX-90_BASE.stl  RX-90_ELBOW.stl  RX-90_FLANGE.stl  RX-90_FOREARM.stl  RX-90_SHOULDER.stl  RX-90_WRIST.stl  STAUBLI RX90 STP.stl  STAUBLI RX90.stl
rx90_description/rviz/: rx90.rviz  rx90_config.rviz
rx90_description/src/: rx90_ik.cpp
rx90_description/urdf/: rx90 (copy).xacro  rx90 (copy)inercias.xacro  rx90.gazebo  rx90.urdf  rx90.xacro  rx90_floor.xacro  rx90_floor_baselink.xacro  rx90_floor_noinertia.xacro
rx90_description/worlds/: rx90.world
rx90_description/xml/: demo.py  demu.py  env.xml  pendulum_kinbody.xml
rx90_floor_moveitconfig/: .setup_assistant  CMakeLists.txt  package.xml
rx90_floor_moveitconfig/config/: rx90.srdf
rx90_floor_moveitconfig/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rx90_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rx90_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  rx90.srdf
rx90_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rx90_moveitconfig/: .setup_assistant  CMakeLists.txt  package.xml
rx90_moveitconfig/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  rx90.srdf  rx90_joint_names.yaml  rx90_moveit_controllers.yaml
rx90_moveitconfig/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  rx90_execution.launch  rx90_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rx90_serial/: CMakeLists.txt  package.xml
rx90_serial/src/: Makefile  Rx90.cpp  Rx90.h  test.cpp
